--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,11 @@
 # Banco principal (PostgreSQL)
 DATABASE_URL=postgresql+psycopg2://radio_user:radio_pass@localhost:5432/radio_ads
 
+# Fontes de logs por frequência
+LOG_SOURCES=102.7=K:\Registro FM;104.7=K:\Registro 104_7
+
+# Prefixo usado para identificar propagandas nos logs
+CHAMADAS_BASE_PATH=J:\AZARASTUDIO\CHAMADAS
+
 # CORS (origens separadas por vírgula)
 CORS_ALLOW_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500
-
