--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,10 @@ CHAMADAS_BASE_PATH=J:\AZARASTUDIO\CHAMADAS
 
 # CORS (origens separadas por vírgula)
 CORS_ALLOW_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500
+
+# Auth
+AUTH_TOKEN_SECRET=troque-esta-chave-em-producao
+AUTH_TOKEN_EXPIRE_HOURS=8
+INITIAL_ADMIN_USERNAME=admin
+INITIAL_ADMIN_PASSWORD=admin123
+INITIAL_ADMIN_NOME=Administrador
