mudança na auditoria e exceções por horário e suporte a multiplas peças por contrato

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,11 @@ LOG_SOURCES=102.7=K:\Registro FM;104.7=K:\Registro 104_7
 # Prefixo usado para identificar propagandas nos logs
 CHAMADAS_BASE_PATH=J:\AZARASTUDIO\CHAMADAS
 
+# Janelas sem auditoria automática por log Zara (origem OBS/manual).
+# Formato: frequencia|dias_iso(1-7)|HH:MM-HH:MM|motivo;...
+# Exemplo abaixo bloqueia segunda-sexta 11h-14h na 102.7
+AUTO_AUDIT_BLOCK_WINDOWS=102.7|1-5|11:00-14:00|obs_video
+
 # CORS (origens separadas por vírgula)
 CORS_ALLOW_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500
 
