hardening de autenticação por variáveis obrigatórias, tratamento de erros sem vazamento de detalhe

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,26 @@
 # Banco principal (PostgreSQL)
 DATABASE_URL=postgresql+psycopg2://radio_user:radio_pass@localhost:5432/radio_ads
 
+# Ambiente da aplicação: development|production
+APP_ENV=development
+APP_DEBUG=true
+APP_RELOAD=true
+API_DOCS_ENABLED=true
+HOST=0.0.0.0
+PORT=8000
+WEB_CONCURRENCY=2
+
 # Fontes de logs por frequência
 LOG_SOURCES=102.7=K:\Registro FM;104.7=K:\Registro 104_7
 
 # Prefixo usado para identificar propagandas nos logs
 CHAMADAS_BASE_PATH=J:\AZARASTUDIO\CHAMADAS
+
+# Monitor de logs - performance/rede
+REQUEST_TIMEOUT=8
+REQUEST_RETRIES=3
+INGEST_BATCH_SIZE=100
+WATCH_DEBOUNCE_SECONDS=1.5
 
 # Janelas sem auditoria automática por log Zara (origem OBS/manual).
 # Formato: frequencia|dias_iso(1-7)|HH:MM-HH:MM|motivo;...
@@ -16,8 +31,8 @@ AUTO_AUDIT_BLOCK_WINDOWS=102.7|1-5|11:00-14:00|obs_video
 CORS_ALLOW_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500
 
 # Auth
-AUTH_TOKEN_SECRET=seara-fm-warning
+AUTH_TOKEN_SECRET=troque-por-uma-chave-com-32-ou-mais-caracteres
 AUTH_TOKEN_EXPIRE_HOURS=8
 INITIAL_ADMIN_USERNAME=admin
-INITIAL_ADMIN_PASSWORD=warning
+INITIAL_ADMIN_PASSWORD=troque-por-senha-forte
 INITIAL_ADMIN_NOME=Administrador
