implementando suporte de API key

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,6 +21,8 @@ REQUEST_TIMEOUT=8
 REQUEST_RETRIES=3
 INGEST_BATCH_SIZE=100
 WATCH_DEBOUNCE_SECONDS=1.5
+# Chave de serviço para autenticar monitor na API (header X-API-Key)
+MONITOR_API_KEY=
 
 # Janelas sem auditoria automática por log Zara (origem OBS/manual).
 # Formato: frequencia|dias_iso(1-7)|HH:MM-HH:MM|motivo;...
