--- a/backend/.env.prod.example
+++ b/backend/.env.prod.example
@@ -30,3 +30,4 @@ REQUEST_TIMEOUT=8
 REQUEST_RETRIES=3
 INGEST_BATCH_SIZE=100
 WATCH_DEBOUNCE_SECONDS=1.5
+MONITOR_API_KEY=troque-por-api-key-de-servico-gerada-em-auth-api-keys
