--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -47,7 +47,7 @@ services:
     ports:
       - "127.0.0.1:8000:8000"
     healthcheck:
-      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://127.0.0.1:8000/health', timeout=5)\""]
+      test: ["CMD-SHELL", "python -c \"import os,urllib.request; req=urllib.request.Request('http://127.0.0.1:8000/health', headers={'X-API-Key': os.environ.get('MONITOR_API_KEY', '')}); urllib.request.urlopen(req, timeout=5)\""]
       interval: 15s
       timeout: 5s
       retries: 5
